sri-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sri-service
spec:
  selector:
    app: sri-app-wp
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
